--- a/templates/users/email-welcome.html
+++ b/templates/users/email-welcome.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>{% translate "Dear" %} {{ user.get_full_name }}!</h2>
+        <h2>{% translate "Chèr(e)" %} {{ user.get_full_name }}!</h2>
         <p>{% translate "Bienvenue sur Mackdin ! Nous sommes ravis de vous compter parmi nos nouveaux membres." %}</p>
         <p class="welcome-message">{% translate "Merci de rejoindre notre réseau social professionnel." %}</p>
         <div class="contact-info">
