navigate to new url in javascript, but force reload? (Nw solution)

--- a/templates/home/components/navbar2.html
+++ b/templates/home/components/navbar2.html
@@ -97,7 +97,7 @@
       <span class="text">Administration</span>
     </a>
     {% endif %}
-    <a  id="language_code_link" style="cursor: pointer">
+    <a  id="language_code_link" style="cursor: pointer" href="/">
       <img src="{% static 'home/svg/language.svg' %}">
       <span class="text">{% if LANGUAGE_CODE == 'fr' %}{% translate 'Traduire en Anglais' %}{% else %}{% translate 'Traduire en Français' %}{% endif %}</span>
     </a>
