--- a/templates/users/components/btn-social-auth.html
+++ b/templates/users/components/btn-social-auth.html
@@ -4,7 +4,31 @@
 
 
 <div class="social-auth-container">
-  <a href="{% provider_login_url 'google' %}" id="google" class="btn-link">
+  <form action="{% provider_login_url 'google' %}" method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn-link">
+      <img class="ml" src="{% static 'home/svg/google.svg' %}" alt="Compte google">
+      <span>{% translate "Continue avec" %} Google</span>
+    </button>
+  </form>
+
+  <form action="{% provider_login_url 'facebook' method='oauth2' %}" method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn-link">
+      <img class="ml" src="{% static 'home/svg/facebook.svg' %}" alt="Compte facebook">
+      <span>{% translate "Continue avec" %} Facebook</span>
+    </button>
+  </form>
+
+  <form action="{% provider_login_url 'github' %}" method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn-link">
+      <img class="ml" src="{% static 'home/svg/github.svg' %}" alt="Compte github">
+      <span>{% translate "Continue avec" %} GitHub</span>
+    </button>
+  </form>
+
+  <!-- <a href="{% provider_login_url 'google' %}" id="google" class="btn-link">
     <img class="ml" src="{% static 'home/svg/google.svg' %}" alt="Compte google">
     <span>{% translate "Continue avec" %} Google</span>
   </a>
@@ -15,5 +39,5 @@
   <a href="{% provider_login_url 'github' %}" id="github" class="btn-link">
     <img class="ml" src="{% static 'home/svg/github.svg' %}" alt="Compte github">
     <span>{% translate "Continue avec" %} GitHub</span>
-  </a>
+  </a> -->
 </div>
