--- a/static/users/sass/pages/_forms_sign_up_sign_in.sass
+++ b/static/users/sass/pages/_forms_sign_up_sign_in.sass
@@ -154,7 +154,7 @@
     .pass:hover
       text-decoration: underline
 
-    input[type="submit"]
+    button[type="submit"]
       margin: 15px 0 5px
       width: 100%
       height: 50px
@@ -167,7 +167,7 @@
       cursor: pointer
       outline: none
 
-    input[type="submit"]:hover
+    button[type="submit"]:hover
       border-color: $color4
       transition: 0.5s
 
