--- a/templates/users/password_reset_form.html
+++ b/templates/users/password_reset_form.html
@@ -14,8 +14,7 @@
 <div class="form-container">
   <div class="title-form">
     <h3>{% translate "Entrez un nouveau mot de passe" %}</h3>
-    <p class="p-info">{% translate "Veuillez entrer votre nouveau mot de passe deux fois afin que nous puissions
-      vérifier que vous l'avez saisi correctement." %}</p>
+    <p class="p-info">{% translate "Veuillez entrer votre nouveau mot de passe deux fois afin que nous puissions vérifier que vous l'avez saisi correctement." %}</p>
   </div>
 
   <forM method="POST" entity="multipart/form-data">{% csrf_token %}
@@ -34,7 +33,7 @@
       </div>
     </div>
     <span class="content-error"></span>
-    <input type="submit" value="Envoyer">
+    <button type="submit">{% translate "Envoyer" %}</button>
     <div class="sign_link">
       <p><a href="{% url 'home:home' %}">{% translate "Revenir à la page d'accueil" %}</a></p>
     </div>
