--- a/templates/users/password_reset_send.html
+++ b/templates/users/password_reset_send.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
 
 {% block style %}
@@ -16,7 +17,7 @@
     <p class="p-info">{% translate "Votre mot de passe a été bien défini. Vous pouvez continuer et vous connecter maintenant." %}</p>
   </div>
   <div class="sign_link">
-    <p><a href="{% url 'sign_in' %}">{% translate "Se connecter" %}</a></p>
+    <a href="{% url 'sign_in' %}" class="btn-sign">{% translate "Se connecter" %}</a>
   </div>
 </div>
 {% endblock content %}
