--- a/static/users/css/style.css
+++ b/static/users/css/style.css
@@ -89,6 +89,7 @@ body {
   background: #f1f1f1;
   border-radius: 10px;
   box-shadow: 0 0 5px #34495e;
+  padding-bottom: 10px;
 }
 @media screen and (max-width: 500px) {
   .form-container {
@@ -294,10 +295,10 @@ body {
   margin: 15px 0;
   text-align: center;
   font-size: 16px;
-  color: #34495e;
+  color: #1abc9c;
 }
 .sign_link a {
-  color: #34495e;
+  color: #2691d9;
   text-decoration: none;
 }
 .sign_link a:hover {
