--- a/static/users/sass/pages/_forms_sign_up_sign_in.sass
+++ b/static/users/sass/pages/_forms_sign_up_sign_in.sass
@@ -4,6 +4,7 @@
   background: $color2
   border-radius: 10px
   box-shadow: 0 0 5px $color4
+  padding-bottom: 10px
   // margin: 1.5rem 0
   @media screen and (max-width: 500px)
     height: 100%
@@ -202,10 +203,27 @@
   margin: 15px 0
   text-align: center
   font-size: 16px
-  color: $color4
+  color: $color3
 
   a
-    color: $color4
+    color: $color12
     text-decoration: none
     &:hover
       text-decoration: underline
+
+// .btn-sign
+//   margin: 15px 0 5px
+//   width: 80%
+//   height: 50px
+//   padding: 8px 40px
+//   border: 1px solid
+//   background: linear-gradient(120deg, $color4, $color3)
+//   border-radius: 25px
+//   font-size: 18px
+//   color: $color2
+//   font-weight: 700
+//   cursor: pointer
+//   outline: none
+//   &:hover
+//     border-color: $color4
+//     transition: 0.5s
