--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -13,8 +13,7 @@
 <div class="form-container">
   <div class="title-form">
     <h3>{% translate "Réinitialisation du mot de passe" %}</h3>
-    <p class="p-info">{% translate "Mot de passe oublié ? Entrez votre adresse email ci-dessous et nous vous enverrons
-      par e-mail des instructions pour en définir une nouvelle." %}</p>
+    <p class="p-info">{% translate "Mot de passe oublié ? Entrez votre adresse email ci-dessous et nous vous enverrons par e-mail des instructions pour en définir une nouvelle." %}</p>
   </div>
 
   <form method="POST" entity="multipart/form-data">{% csrf_token %}
@@ -26,7 +25,7 @@
       </div>
     </div>
     <span class="content-error"></span>
-    <input type="submit" value="Envoyer">
+    <button type="submit">{% translate "Envoyer" %}</button>
     <div class="sign_link">
       <p><a href="{% url 'home:home' %}">{% translate "Revenir à la page d'accueil" %}</a></p>
     </div>
