caching with redis

--- a/static/users/sass/pages/_forms_sign_up_sign_in.sass
+++ b/static/users/sass/pages/_forms_sign_up_sign_in.sass
@@ -4,7 +4,7 @@
   background: $color2
   border-radius: 10px
   box-shadow: 0 0 5px $color4
-  padding-bottom: 10px
+  padding-bottom: 3px
   // margin: 1.5rem 0
   @media screen and (max-width: 500px)
     height: 100%
@@ -42,6 +42,7 @@
       border-radius: 10px
       cursor: pointer
       transition: 0.5s
+      margin: 0
       &:hover
         background: rgba($color4, 0.7)
         transition: 0.5s
@@ -50,7 +51,7 @@
         height: 25px
 
   .sep
-    margin: 1.5rem 0 .5rem
+    margin: 1rem 0 .5rem
     display: flex
     justify-content: center
     align-items: center
