--- a/static/users/css/style.css
+++ b/static/users/css/style.css
@@ -89,7 +89,7 @@ body {
   background: #f1f1f1;
   border-radius: 10px;
   box-shadow: 0 0 5px #34495e;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
 }
 @media screen and (max-width: 500px) {
   .form-container {
@@ -128,6 +128,7 @@ body {
   border-radius: 10px;
   cursor: pointer;
   transition: 0.5s;
+  margin: 0;
 }
 .form-container .social-auth-container .btn-link:hover {
   background: rgba(52, 73, 94, 0.7);
@@ -138,7 +139,7 @@ body {
   height: 25px;
 }
 .form-container .sep {
-  margin: 1.5rem 0 0.5rem;
+  margin: 1rem 0 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
