--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Macktireh Abdi Soubaneh" />
+  <meta name="description" content="Mackdin is a social networking project I created using Python with Django and a bit of React. It's a customized clone of LinkedIn.">
   <title>{% block title %} {% endblock title %}| Mackdin</title>
 
   <!-- My Style CSS -->
