--- a/templates/home/components/navbar-home.html
+++ b/templates/home/components/navbar-home.html
@@ -27,21 +27,20 @@
           <div class="nav-text">
             <img class="nav-img" src="{% static 'home/svg/user.svg' %}" alt="">
             <span class="animation {% if start_animation == 'sign_in' %}start-animation{% endif %}"></span>
-            <span class="nav-text-span">{% translate 'Connexion' %}</span>
+            <span class="nav-text-span">{% translate "s'identifier" %}</span>
           </div>
         </a>
         <a href="{% url 'sign_up' %}" class="nav-item">
           <div class="nav-text">
             <img class="nav-img" src="{% static 'home/svg/signup.svg' %}" alt="">
             <span class="animation {% if start_animation == 'sign_up' %}start-animation{% endif %}"></span>
-            <span>{% translate 'Inscription' %}</span>
+            <span>{% translate "S'inscrire" %}</span>
           </div>
         </a>
         <a href="/{% if LANGUAGE_CODE == 'fr' %}en{% else %}fr{% endif %}/" class="nav-item">
           <div class="nav-text">
             <img class="nav-img" src="{% static 'home/svg/language.svg' %}" alt="">
             <span class="animation {% if start_animation == 'sign_up' %}start-animation{% endif %}"></span>
-            <!-- <span>{% translate 'Inscription' %}</span> -->
           </div>
         </a>
         {% endif %}
